# gradnet

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.VSCodeCounter/2025-11-21_16-54-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: package-smoke.yml
.virtual_documents/examples/: 1_algebraic_connectivity.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting-started.rst  index.rst  robots.txt  tutorials.rst
docs/source/_autosummary/: gradnet.GradNet.rst  gradnet.gradnet.DenseParameterization.rst  gradnet.gradnet.GradNet.rst  gradnet.gradnet.SparseParameterization.rst  gradnet.integrate_ode.rst  gradnet.ode.integrate_ode.rst  gradnet.trainer.fit.rst  gradnet.trainer.fit_gradnet.rst
docs/source/_static/: analytics.js  custom.css  download.js  download_data.js  hide_versions.css  hide_versions.js
docs/source/api/: fit.rst  gradnet.rst  integrate_ode.rst  pl_fit.rst  pl_trainer.rst  trainer.rst  utils.rst
docs/source/tutorials/: 1_algebraic_connectivity.ipynb  1_mean_shortest_path.ipynb  1_λ₂_algebraic_connectivity.ipynb  2_karate_club.ipynb  2_kuramoto.ipynb  3_karate_club.ipynb  4_efficiency.ipynb  (+4 more)
examples/: #_efficiency.ipynb  #_jump_shortest_paths.ipynb  #_karate_club.ipynb  #_kuramoto-sakaguchi.ipynb  #_mean_shortest_path.ipynb  #_resistance_distance.ipynb  1_algebraic_connectivity.ipynb  1_mean_shortest_path.ipynb  1_λ₂_algebraic_connectivity.ipynb  2_karate_club.ipynb  2_kuramoto.ipynb  3_karate_club.ipynb  3_resistance_distance.ipynb  4_efficiency.ipynb  4_network_reconstruction.ipynb  5_digit_recognition.py  5_grid_resistance.py  5_quantum_internet.ipynb  6_logical_gates.ipynb  test.py
src/gradnet/: __init__.py  gradnet.py  ode.py  pl_trainer.py  trainer.py  utils.py
tests/: test_gradnet.py  test_ode.py  test_pl_trainer.py  test_sparse_dense_diffusion_event_time.py  test_trainer.py  test_utils_shortest_path.py
(+1 files in other folders)
