[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "gradnet"
version = "0.1.0"
description = "Trainable graph adjacency parameterizations with ODE integration and Lightning training helpers."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["graphs", "pytorch", "optimization", "ode", "lightning"]
dependencies = [
  "torch>=2.0",
  "numpy>=1.21",
  "networkx>=2.6",
  "pytorch-lightning>=1.9,<3",
  "tqdm>=4.64",
  "torchdiffeq>=0.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gradnet"]